--- a/src/main.css
+++ b/src/main.css
@@ -133,6 +133,7 @@ ul {
   flex-shrink: 0;
   margin-top: 4px;
   appearance: none;
+  cursor: pointer;
 }
 
 .task-list-item input:hover {
@@ -146,7 +147,7 @@ ul {
   background-color: var(--checkbox-color);
 }
 
-.task-list-item input:checked + span {
+.done {
   color: #272727;
   text-decoration: line-through #272727;
 }
@@ -160,7 +161,6 @@ ul {
   line-height: 24px;
   position: relative;
   transition: 0.2s;
-  cursor: pointer;
 }
 
 .delete-btn {
